--- a/src/screens/LandingScreen.css
+++ b/src/screens/LandingScreen.css
@@ -6,6 +6,7 @@
   margin: 0 auto;
   display: flex;
   flex-direction: column;
+  overflow-x: hidden;
   overflow-y: auto;
   -webkit-overflow-scrolling: touch;
   padding-bottom: env(safe-area-inset-bottom);
